--- a/Project/targets.yml
+++ b/Project/targets.yml
@@ -2,3 +2,4 @@ include:
   - Targets/XcodeGen.yml
   - Targets/XcodeGenTests.yml
   - Targets/XcodeGenUITests.yml
+  - Targets/NotificationServiceExtension.yml
