--- a/Project/Targets/XcodeGen.yml
+++ b/Project/Targets/XcodeGen.yml
@@ -4,5 +4,6 @@ targets:
     type: application
     sources:
       - XcodeGen
+      - Project/Configs
     dependencies:
       - carthage: Alamofire
